--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -13,5 +13,6 @@
     <input type="password" name="password" id="password" required>
 
     <input type="submit" value="Log in">
+    <a href="#">Forgotten password?</a>
 </form>
 {% endblock %}
