--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,17 +1,57 @@
 <!doctype>
-<title>{% block title %}{% endblock %} - yanga</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-<nav>
-    <h1>yanga</h1>
-    <ul>
-        {% if g.user %}
-        <li><span>{{ g.user['email'] }}</span></li>
-        <li><a href="{{ url_for('auth.logout') }}">Log out</a></li>
-        {% else %}
-        <li><a href="{{ url_for('auth.login') }}">sign in</a></li>
-        <li><a href="{{ url_for('auth.register') }}">sign up</a></li>
-        {% endif %}
-    </ul>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='img/yangaprologo.png') }}">
+    <title>{% block title %}{% endblock %} - yanga</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://example.com/path-to-savinto-pro-font.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
+</head>
+</html>
+<body>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <a class="navbar-band text-decoration-none mb-2" href="#">
+            <img src="{{ url_for('static', filename='img/yangaprologo.png') }}" alt=" Yanga Logo" width="50" height="50">
+            <span class="fs-4 fw-semibold text-success" style="font-family: 'Savinto Pro', Arial, Helvetica, sans-serif;">yanga</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <form class="d-flex ms-auto mb-2 mb-lg-0" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Moniepoint</a></li>
+                        <li><a class="dropdown-item" href="#">Opay</a></li>
+                        <li><a class="dropdown-item" href="#">Palmpay</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#">select all</a> </li>
+                    </ul>
+                </li>
+                <div class="btn-group">
+                    <a class="btn btn-success fw-bold" role="button" href="{{ url_for('auth.login') }}">Sign in</a>
+                    <span class="vr mx-1"></span>
+                    <a class="btn btn-success fw-bold" href="{{ url_for('auth.register') }}">Sign up</a>
+                </div>
+            </ul>
+        </div>
+    </div>
 </nav>
 <section class="content">
     <header>
@@ -22,3 +62,6 @@
     {% endfor %}
     {% block content %}{% endblock %}
 </section>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
