--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -7,6 +7,11 @@
 {% block content %}
 <div class="container d-flex justify-content-center mt-5">
 <form method="post" class="w-50">
+    <a href="#" class="google btn btn btn-danger form-control fw-semibold">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" alt="Gmail Logo" width="20" class="me-2">
+        Login with Gmail
+    </a>
+    <div class="login-divider">OR</div>
     <div class="input-group mb-3">
         <label class="input-group form-label" for="email">Email</label>
         <span class="input-group-text" id="basic-addon1"><i class="bi bi-envelope-fill"></i></span>
