--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='img/yangaprologo.png') }}">
     <title>{% block title %}{% endblock %} - yanga</title>
+    <!-- Bootstrap CSS link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="https://example.com/path-to-savinto-pro-font.css" rel="stylesheet">
+    <!-- link to Bootstrap icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
 </head>
-</html>
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
@@ -57,11 +57,28 @@
     <header>
         {% block header %}{% endblock %}
     </header>
-    {% for message in get_flashed_messages() %}
-       <div class="flash">{{ message }}</div>
-    {% endfor %}
-    {% block content %}{% endblock %}
-</section>
 
+    <!-- Flashed messages logic -->
+    {% with messages = get_flashed_messages(with_categories=True) %}
+       {% if messages %}
+              {% for category, message in messages %}
+                 <div class="{{ category }}">{{ message }}</div>
+              {% endfor %}
+       {% endif %}
+    {% endwith %}
+
+    <!-- body contents displayed here -->
+    <main>
+        {% block content %}{% endblock %}
+    </main>
+
+</section>
+    <footer>
+        {% block footer %}
+        <div class="text-center">&copy 2025 - yanga</div>
+        {% endblock %}
+    </footer>
+<!-- Bootstrap JS link -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
+</html>
