bootsrap alerts added

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -62,7 +62,15 @@
     {% with messages = get_flashed_messages(with_categories=True) %}
        {% if messages %}
               {% for category, message in messages %}
-                 <div class="{{ category }}">{{ message }}</div>
+                 <div class=" alert text-center
+                     {% if category == 'error' %}alert-danger
+                     {% elif category == 'success' %}alert-success
+                     {% elif category == 'warning '%}alert-warning
+                     {% elif category == 'info '%}alert-info
+                     {% else %}alert-secondary
+                     {% endif %}
+                     alert-dismissible fade show" role="alert">{{ message }}
+                 </div>
               {% endfor %}
        {% endif %}
     {% endwith %}
