--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,5 +5,11 @@
 {% endblock %}
 
 {% block content %}
+{{ g.user['email'] }}<br>
+{{ g.user['firstname'] }}<br>
+{{ g.user['lastname'] }}<br>
+{{ g.user['tel'] }}<br>
+{{ g.user['state'] }}<br>
+{{ g.user['gender'] }}<br>
 <h2> This is yanga</h2>
 {% endblock %}
