clean name input

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -9,7 +9,7 @@
 <form method="post" class="w-50">
     <div class="input-group mb-3">
         <label class="input-group form-label fst-italic" for="firstname">First Name</label>
-        <input class="form-control" type="text" name="firstname" id="firstname"  required>
+        <input class="form-control" type="text" name="firstname" id="firstname">
     </div>
     <div class="input-group mb-3">
         <label class="input-group form-label fst-italic" for="lastname">Last Name</label>
