--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -31,8 +31,8 @@
        <label for="state" class="input-group form-label fst-italic">State</label>
         <select id="state" name="state_name" class="form-select" required>
             <option value="" disabled selected hidden>Choose...</option>
-            {% for code, state_name in state %}
-            <option value="{{ code }}">{{ state_name }}</option>
+            {% for state_name in state %}
+            <option value="{{ state_name }}">{{ state_name }}</option>
             {% endfor %}
        </select>
     </div>
