Profile picture logic added

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -58,9 +58,9 @@
                     {% endif %}
 
                     {% if g.user and g.user['profile_pic']%}
-                        <img src="{{ url_for('static', filename='uploads/profile_pictures/' ~ g.user['profile_pic']) }}" alt="Profile Picture" class="rounded-circle mx-3" style="width: 40px; height: 40px; object-fit: cover;">
+                        <img src="{{ url_for('static', filename='profile_pictures/' ~ g.user['profile_pic']) }}" alt="Profile Picture" class="rounded-circle mx-3" style="width: 40px; height: 40px; object-fit: cover;">
                            {% else %}
-                        <img src="{{ url_for('static', filename='uploads/profile_pictures/avater.png' ~ g.user['profile_pic']) }}" alt="Profile Picture" class="rounded-circle mx-3" style="width: 40px; height: 40px; object-fit: cover;">
+                        <img src="{{ url_for('static', filename='profile_pictures/avatar.jpg') }}" alt="Profile Picture" class="rounded-circle mx-3" style="width: 40px; height: 40px; object-fit: cover;">
                     {% endif %}
                 </div>
 
