setting profile page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-band text-decoration-none mb-2" href="#">
+        <a class="navbar-band text-decoration-none mb-2" href="{{ url_for('user.dashboard') }}">
             <img src="{{ url_for('static', filename='img/yangaprologo.png') }}" alt=" Yanga Logo" width="50" height="50">
             <span class="fs-4 fw-semibold text-success" style="font-family: 'Savinto Pro', Arial, Helvetica, sans-serif;">yanga</span>
         </a>
@@ -29,7 +29,7 @@
             </form>
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href=" {{ url_for('user.index') }}">Home</a>
+                    <a class="nav-link active" aria-current="page" href=" {{ url_for('user.dashboard') }}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
@@ -50,7 +50,7 @@
 
                 <div class="btn-group">
                     {% if g.user %}
-                       <a class="btn btn-success fw-bold" role="button" href="#">{{ g.user['firstname'].title() }} {{ g.user['lastname'].title() }}</a>
+                       <a class="btn btn-success fw-bold" role="button" href="{{ url_for('user.profile') }}">{{ g.user['firstname'].title() }} {{ g.user['lastname'].title() }}</a>
                     {% else %}
                        <a class="btn btn-success fw-bold" role="button" href="{{ url_for('auth.login') }}">Sign in</a>
                        <span class="vr mx-1"></span>
@@ -58,9 +58,14 @@
                     {% endif %}
 
                     {% if g.user and g.user['profile_pic']%}
+                       <a href="{{ url_for('user.profile') }}">
                         <img src="{{ url_for('static', filename='profile_pictures/' ~ g.user['profile_pic']) }}" alt="Profile Picture" class="rounded-circle mx-3" style="width: 40px; height: 40px; object-fit: cover;">
+                       </a>
                            {% else %}
+                       <a href="{{ url_for('user.profile') }}">
                         <img src="{{ url_for('static', filename='profile_pictures/avatar.jpg') }}" alt="Profile Picture" class="rounded-circle mx-3" style="width: 40px; height: 40px; object-fit: cover;">
+                      </a>
+
                     {% endif %}
                 </div>
 
